# WarpCore

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
crates/backends/anthropic/: Cargo.toml
crates/backends/anthropic/src/: lib.rs
crates/backends/diffusion-rs/: Cargo.toml  README.md
crates/backends/diffusion-rs/src/: lib.rs
crates/backends/hive/: cargo.toml
crates/backends/hive/src/: lib.rs
crates/backends/llama_cpp/: Cargo.toml  README.md
crates/backends/llama_cpp/src/: lib.rs
crates/backends/openai/: Cargo.toml
crates/backends/openai/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  traits.rs
crates/examples/: Cargo.toml
crates/examples/tests/: anthropic_integration.rs  diffusion_rs_integration.rs  hive_integration.rs  llama_cpp_integration.rs  openai_integration.rs
docs/: backends.md  core.md  overview.md  usage.md
src/: lib.rs
