[package]
name = "warpcore-examples"
version = "0.1.0"
edition = "2021"

publish = false # Prevent publishing examples crate

[dependencies]
warpcore = { path = "../../", features = ["all"] } # Depend on the root library
warpcore-openai = { path = "../backends/openai", version = "0.1.0", optional = true }
warpcore-anthropic = { path = "../backends/anthropic", version = "0.1.0", optional = true }
warpcore-llama-cpp = { path = "../backends/llama_cpp", version = "0.1.0", optional = true } # Add llama_cpp backend
warpcore-diffusion-rs = { path = "../backends/diffusion-rs", version = "0.1.0", optional = true } # <-- NEW
warpcore-hive = { path = "../backends/hive", version = "0.1.0", optional = true }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"

[features]
# These features just re-expose the features from the main warpcore
default = []
openai = ["warpcore-openai", "warpcore/openai"]
anthropic = ["warpcore-anthropic", "warpcore/anthropic"]
llama_cpp = ["warpcore-llama-cpp", "warpcore/llama_cpp"] # Define llama_cpp feature
diffusion-rs = ["warpcore-diffusion-rs", "warpcore/diffusion-rs"] # <-- NEW
hive = ["warpcore-hive", "warpcore/hive"]
all = ["openai", "anthropic", "llama_cpp", "diffusion-rs"] # <-- MODIFIED