[package]
name = "inference-lib-anthropic"
version = "0.1.0"
edition = "2021"

[dependencies]
inference-lib-core = { path = "../../core", features = ["anthropic_error_conversion"] } # Enable error conversion feature

# Add Anthropic client crate here
anthropic = { workspace = true, features = ["rustls"] } # Using the `anthropic` crate

reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3" # Specific version used by anthropic crate's stream example 