[package]
name = "warpcore-diffusion-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio-stream = "0.1"
tracing = "0.1"
anyhow = "1.0"

# Placeholder for diffusion-rs git dependency - replace <owner>
diffusion-rs = { version = "0.1.9" , default-features = false }
# For local development, you can use a path dependency instead:
# diffusion-rs = { path = "/path/to/your/local/diffusion-rs/crates/diffusion-rs", default-features = false, features = ["preset", "api"] }

warpcore-core = { path = "../../core" }

serde = { version = "1.0", features = ["derive"] } # For Preset mapping if needed
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["full"] } 